force-app/main/default/objects/Expo_Vehicle_Info__c/Expo_Vehicle_Info__c.object-meta.xml
<CustomObject>
    <description>车辆信息</description>
    <label>Expo Vehicle Info</label>
    <nameField>
        <label>Plate No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expo Vehicle Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>