force-app/main/default/objects/Expo_Vehicle_Info__c/fields/CoverImgFileType__c.field-meta.xml
<CustomField>
    <fullName>CoverImgFileType__c</fullName>
    <label>CoverImgFileType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>