force-app/main/default/objects/Expo_Vehicle_Info__c/fields/CoverImgVersionId__c.field-meta.xml
<CustomField>
    <fullName>CoverImgVersionId__c</fullName>
    <label>CoverImgVersionId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>