force-app/main/default/objects/Expo_Vehicle_Info__c/fields/Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time__c</fullName>
    <description>出发时间</description>
    <label>Departure Time</label>
    <type>Time</type>
</CustomField>