force-app/main/default/objects/Expo_Vehicle_Info__c/fields/driver__c.field-meta.xml
<CustomField>
    <fullName>driver__c</fullName>
    <label>driver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>