force-app/main/default/objects/Expo_Vehicle_Info__c/fields/Enabled_State__c.field-meta.xml
<CustomField>
    <fullName>Enabled_State__c</fullName>
    <defaultValue>false</defaultValue>
    <description>车辆是否能否被检测到</description>
    <label>Enabled State</label>
    <type>Checkbox</type>
</CustomField>