force-app/main/default/objects/Expo_Vehicle_Info__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>分组名称</description>
    <label>Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>