force-app/main/default/objects/Expo_Vehicle_Info__c/fields/Seat__c.field-meta.xml
<CustomField>
    <fullName>Seat__c</fullName>
    <description>座位数</description>
    <label>Seat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>