force-app/main/default/objects/Expo_Vehicle_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>driver__c</columns>
    <columns>driver_phone__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exhibition_Management__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Host1</value>
    </filters>
    <label>All</label>
</ListView>