force-app/main/default/objects/Expo_Vehicle_Info__c/listViews/X137_Canton_Fair.listView-meta.xml
<ListView>
    <fullName>X137_Canton_Fair</fullName>
    <columns>NAME</columns>
    <columns>driver__c</columns>
    <columns>driver_phone__c</columns>
    <columns>Exhibition_Management__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Management__c</field>
        <operation>contains</operation>
        <value>137</value>
    </filters>
    <label>137 Canton Fair</label>
</ListView>