force-app/main/default/objects/Expo_Vehicle_Info__c/listViews/X2025_Vehicle_Info.listView-meta.xml
<ListView>
    <fullName>X2025_Vehicle_Info</fullName>
    <columns>NAME</columns>
    <columns>driver__c</columns>
    <columns>driver_phone__c</columns>
    <columns>Exhibition_Management__c</columns>
    <columns>Remark__c</columns>
    <columns>Seat__c</columns>
    <columns>Vehicle_Assistant__c</columns>
    <columns>Enabled_State__c</columns>
    <filterScope>ScopingRule</filterScope>
    <filters>
        <field>Exhibition_Management__c</field>
        <operation>contains</operation>
        <value>2025</value>
    </filters>
    <label>2025 Vehicle Info</label>
</ListView>